# MotionCaptureInterpolation

./: README.md
Assignment2/: CSCI 520 Assignment 2.docx  (+2 more)
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/: 07_05-walk_output.amc  131_04-dance_output_BE_N20.amc  131_04-dance_output_BQ_N20.amc  131_04-dance_output_LQ_N20.amc  135_06-martialArts_output_BE_N40.amc  135_06-martialArts_output_BQ_N40.amc  135_06-martialArts_output_LQ_N40.amc  CMakeCache.txt  CMakeLists.txt  ReadMe.rtf  cmake_install.cmake  interpolate  interpolator.cpp  interpolator.h  mocapPlayer
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Assignment2.build/Debug/ALL_BUILD.build/: Script-6F6C4833267D47CE8260D1EE.sh  dgph  dgph~
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Assignment2.build/Debug/ZERO_CHECK.build/: Script-E458C0932A054F83ADE1751A.sh  dgph  dgph~
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Assignment2.build/Debug/interpolator.build/: dgph  dgph~
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Assignment2.xcodeproj/: project.pbxproj
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Assignment2.xcodeproj/project.xcworkspace/xcuserdata/yangjialin.xcuserdatad/: UserInterfaceState.xcuserstate
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Assignment2/csci520-assignment2-startercode/mocapPlayer-starter/Debug/: interpolator
(+161 files in other folders)
